# server-client

./: .gitignore  CMakeLists.txt  CrossPlatformClient  README.md  a.out  c1  client  client.cpp  client_test  make.sh  s1  server  server.cpp  server_test.cpp  test.cpp
Client_files/: CrossPlatformClient.cpp  CrossPlatformClient.h  SocketClient.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketClient_test.cpp  client_start.cpp
Server_files/: Server.cpp  Server.h  ServerClient.cpp  ServerClient.h  ServerClient22.cpp  ServerSocket.cpp  ServerSocket.h  server_start.cpp
Server_files /: ServerClient.cpp  ServerSocket.cpp
